--- a/package.json
+++ b/package.json
@@ -16,17 +16,10 @@
   "author": "balderdashy",
   "license": "MIT",
   "dependencies": {
-  	"lodash": ">=2.4.x",
-  	"merge-defaults": ">=0.1.0"
-  },
-  "devDependencies": {
-    "sails-generate": "*",
-    "reportback": "*",
-    "fs-extra": "*"
+  	"lodash": "~2.4.0",
   },
   "sailsGenerator": {
     "type": "directive",
-    "behavior": "overrides `sails generate directive`",
     "sailsVersion": "~0.10.0"
   }
 }
